Fix table heading font color in dark mode
PR:             261011
Submitted by:   Jerry Jacobs <jerry.jacobs (AT) xor-gate.org>

--- a/documentation/themes/beastie/assets/styles/global.scss
+++ b/documentation/themes/beastie/assets/styles/global.scss
@@ -495,6 +495,7 @@ table.tableblock {
   th {
     text-align: left;
     background-color: var(--table-header-background-color);
+    color: var(--table-header-font-color);
     text-rendering: optimizeLegibility;
     padding: .5em .625em .625em;
     border: 0 solid #DEDEDE;
