--- a/documentation/themes/beastie/assets/styles/variables.scss
+++ b/documentation/themes/beastie/assets/styles/variables.scss
@@ -53,6 +53,7 @@
   --card-background-color: #F0F1F5;
   --card-border-color: #F0F1F5;
   --table-header-background-color: #F1F3F1;
+  --table-header-font-color: #444;
   --footer-background: #F0F1F5;
   --footer-border-color: #F0F1F5;
   --lines-color: #E6ECF1;
@@ -87,6 +88,7 @@
   --card-background-color: #272727;
   --card-border-color: #272727;
   --table-header-background-color: #F1F3F1;
+  --table-header-font-color: #444;
   --footer-background: #2B2B2B;
   --footer-border-color: #2B2B2B;
   --lines-color: #4d4d4d;
@@ -121,6 +123,7 @@
   --card-background-color: #000;
   --card-border-color: #FFF;
   --table-header-background-color: #FFF;
+  --table-header-font-color: #000;
   --footer-background: #000;
   --footer-border-color: #FFF;
   --lines-color: #FFF;
